<resources>
    <string name="app_name">Datricle Run</string>
    <string name="your_runs">Your Runs</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCQ5dayZCH6aKiMmv7UpNelIcAh9IYBCao</string>
    <string name="start_text">Start</string>
    <string name="stop_text">Stop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fitness_app">Datricle Run</string>
    <string name="sort_by">Sort by:</string>
    <string name="start_tracking_button">start tracking button</string>
    <string name="welcome_nto_article_run">Welcome\nTo Darticle Run</string>
    <string name="let_s_know_about_you">Let\'s Know About You</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="go">GO</string>
    <string name="let_s_go_username">Let\'s go, USERNAME!</string>
    <string name="_00_00_00_00">00:00:00:00</string>
    <string name="finish_run">Finish Run</string>
    <string name="cancel_run">Cancel Run</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="apply_changes">Apply changes</string>
</resources>