<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.fragments.SettingsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameSettings"
        style="@style/EditTextBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/name_ic">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNameSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            style="@style/TextViewStyle" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/WeightSettings"
        style="@style/EditTextBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameSettings"
        app:startIconDrawable="@drawable/weight_ic">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWeightSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            style="@style/TextViewStyle" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/applyChangesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:text="@string/apply_changes"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WeightSettings" />


</androidx.constraintlayout.widget.ConstraintLayout>